# BNN

./: .gitignore
Core/: .dockerignore  .env.example  Dockerfile.domain-miner  Dockerfile.gateway  Dockerfile.narrative-miner  Dockerfile.validator  README.md  docker-compose.dev.yml  pyproject.toml
Core/config/: logging.py  nodes.yaml  subnet_config.py
Core/data/corpora/chemical_bonding/: coordination_chemistry.txt  covalent_bonding.txt  hydrogen_bonding.txt  ionic_bonding.txt  metallic_bonding.txt  molecular_orbital_theory.txt  valence_bond_theory.txt  van_der_waals_forces.txt
Core/data/corpora/consciousness/: consciousness_and_time.txt  enactivism_and_embodied_mind.txt  global_workspace_theory.txt  hard_problem_of_consciousness.txt  higher_order_theories.txt  integrated_information_theory.txt  machine_consciousness.txt  neural_correlates_of_consciousness.txt
Core/data/corpora/emergence/: cellular_automata_and_emergence.txt  emergence_and_downward_causation.txt  emergence_in_ant_colonies.txt  emergence_in_complex_systems.txt  emergence_in_neural_networks.txt  flocking_and_swarm_behavior.txt  phase_transitions_as_emergence.txt  what_is_emergence.txt
Core/data/corpora/epistemology/: bayesian_epistemology.txt  foundationalism_and_coherentism.txt  justified_true_belief.txt  naturalized_epistemology.txt  reliabilism_and_virtue_epistemology.txt  scientific_knowledge_and_method.txt  skepticism_and_responses.txt  social_epistemology.txt
Core/data/corpora/evolution/: coevolution_and_arms_races.txt  evo_devo.txt  genetic_drift_and_neutral_evolution.txt  horizontal_gene_transfer.txt  major_evolutionary_transitions.txt  natural_selection_mechanism.txt  sexual_selection.txt  speciation_and_reproductive_isolation.txt
Core/data/corpora/information_theory/: channel_capacity.txt  data_compression.txt  error_correction_codes.txt  mutual_information.txt  shannon_entropy.txt  source_coding_theorem.txt
Core/data/corpora/quantum_mechanics/: copenhagen_interpretation.txt  double_slit_experiment.txt  many_worlds_interpretation.txt  quantum_decoherence.txt  quantum_entanglement.txt  quantum_tunneling.txt  spin_and_angular_momentum.txt  superposition_and_measurement.txt  uncertainty_principle.txt  wave_functions.txt
Core/data/corpora/reaction_kinetics/: catalysis_mechanisms.txt  chain_reactions.txt  collision_theory.txt  diffusion_and_transport.txt  oscillating_reactions.txt  photochemical_reactions.txt  rate_laws_and_reaction_order.txt  transition_state_theory.txt
Core/data/corpora/recursion/: divide_and_conquer.txt  dynamic_programming.txt  mutual_and_higher_order_recursion.txt  recursion_fundamentals.txt
Core/data/corpora/relativity/: black_holes_and_singularities.txt  general_relativity_overview.txt  gravitational_waves.txt  length_contraction.txt  mass_energy_equivalence.txt  spacetime_geometry.txt  special_relativity_postulates.txt  time_dilation.txt
Core/data/corpora/stellar_dynamics/: binary_star_systems.txt  nuclear_fusion_in_stars.txt  red_giants_and_stellar_death.txt  stellar_evolution_main_sequence.txt  stellar_populations_and_metallicity.txt  stellar_structure_and_equilibrium.txt  supernovae.txt  (+1 more)
Core/docs/: runbook.md
Core/domain/: corpus(1).py  corpus.py
Core/evolution/: integration.py  proposal.py  pruning.py  voting.py
Core/k8s/: kustomization.yaml
Core/k8s/base/: configmap.yaml  namespace.yaml  secret.yaml
Core/miners/domain/: corpus.py  manifest.py  miner.py
Core/miners/narrative/: miner.py  prompt.py  session_store.py
Core/orchaestrator/: gateway.py  session.py
Core/orchestrator/: embedder.py  router.py  safety_guard.py
Core/scripts/: fetch_corpora.py  register_miner.py  run_local_testnet.sh  seed_graph.py
Core/subnet/: drift_detector.py  emissions.py  graph_store.py  metagraph_watcher.py  protocol.py  validator.py
Core/ui/: package-lock.json  package.json  svelte.config.js  vite.config.js
Core/ui/src/: app.css  app.html
(+51 files in other folders)
